feat: use Java 17 language features
- @Serial
- `instanceof` with assignment

Signed-off-by: manticore-projects <andreas@manticore-projects.com>