@@ -167,7 +167,7 @@ public class SliderDemo extends JPanel {
 		s.setPaintLabels(true);
 		s.setSnapToTicks(true);
 
-		s.getLabelTable().put(new Integer(11), new JLabel(Integer.toString(11), JLabel.CENTER));
+		s.getLabelTable().put(Integer.valueOf(11), new JLabel(Integer.toString(11), JLabel.CENTER));
 		s.setLabelTable(s.getLabelTable());
 
 		s.getAccessibleContext().setAccessibleName(resourceManager.getString("SliderDemo.minorticks"));
